# clay-challenge-evaluation

./: .gitignore  Makefile  pyproject.toml  requirements.txt
