[tool.poetry]
name = "claymodel-latest-v2"
version = "0.1.0"
description = ""
authors = ["Charlene Leong <charleneleong84@gmail.com>"]
license = "MIT"
readme = "README.md"

# Dependencies
[tool.poetry.dependencies]
python = ">=3.10,<3.12"

einops = ">=0.7.0"
fiona = ">=1.9.5"
geopandas = ">=0.14.1"
h5netcdf = ">=1.3.0"
jupyterlab = ">=4.0.7"
jsonargparse = ">=4.27.0"
lightning = ">=2.1.0"
matplotlib = ">=3.8.2"
planetary-computer = ">=1.0.0"
python-box = ">=7.1.0"
rioxarray = ">=0.15.0"
s3fs = ">=2024.3.1"
scikit-image = ">=0.22.0"
scikit-learn = ">=1.4.0"
stackstac = ">=0.5.0"
timm = ">=0.9.16"
torchdata = ">=0.7.1"
transformers = ">=4.35.2"
typeshed-client = ">=2.4.0"
vit-pytorch = ">=1.6.4"
wandb = ">=0.15.12"
zarr = ">=2.16.1"

## Dev dependencies
[tool.poetry.dev-dependencies]
## dvc = "^3.49.0" # https://github.com/iterative/dvc/release
## dvc-s3 = "^3.1.0" # https://github.com/iterative/dvc-s3/release
jupyterlab = "^4.1.6" # https://github.com/jupyterlab/jupyterlab/releases/
ipywidgets = "^8.1.2" # https://github.com/jupyter-widgets/ipywidgets/releases
ipdb = "^0.13.13" # https://pypi.org/project/ipdb/
ruff = "^0.3.1" # https://github.com/astral-sh/ruff/releases
nbqa = "^1.8.3" # https://github.com/nbQA-dev/nbQA/blob/main/docs/history.rst
## nvitop = "^1.3.2" # https://github.com/XuehaiPan/nvitop/releases
pre-commit = "^3.7.0" # https://github.com/pre-commit/pre-commit/releases/

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
